--- a/.github/workflows/wake-and-focus.yml
+++ b/.github/workflows/wake-and-focus.yml
@@ -1,9 +1,9 @@
 name: Wake & Focus (daily 11am NY)
 
-on:
-  schedule:
+# on:
+  # schedule:
     # Run at 15:00 and 15:05 UTC to absorb jitter; gate below keeps behavior exact
-    - cron: "0,5 15 * * *"
+    # - cron: "0,5 15 * * *"
   workflow_dispatch:
     inputs:
       DRY_RUN:
